source/stylesheets/product.sass
.product-breadcrumb
  color: var(--secondary-text-color)
  margin-bottom: 24px

  a
    color: inherit
    text-decoration: none

    &:hover
      color: var(--link-hover-color)
      text-decoration: underline

.product-container
  display: grid
  grid-template-columns: 1fr 360px
  column-gap: 60px
  row-gap: 40px

  @media screen and (max-width: $break-large)
    column-gap: 40px

  @media screen and (max-width: $break-medium)
    grid-template-columns: minmax(0, 1fr)

.reset-selection-button-container
  text-align: center
  width: 100%

  button.reset-selection-button
    display: none

.product-form
  width: 100%

  button
    max-width: 100%

  @media screen and (max-width: $break-large)
    max-width: 100%

.product-selects
  margin-bottom: 20px

.product-option-groups
  display: flex
  flex-direction: column
  gap: 16px

.product-detail
  display: flex
  flex-direction: column
  row-gap: 36px

  &__header
    display: flex
    flex-direction: column
    align-items: flex-start

  &__title
    line-height: 1.2
    padding-bottom: 10px

  &__status
    text-transform: uppercase
    font-size: .825rem
    line-height: normal
    font-weight: 500
    display: inline-block
    padding: 4px 6px
    border: 1px solid var(--border-color)
    border-radius: var(--border-radius)
    letter-spacing: 1.1px

    &.with-spacing
      margin-left: 8px

  &__pricing
    color: var(--secondary-text-color)
    display: flex
    align-items: center
    font-size: 1.5em

  .page-title
    margin-bottom: 0
    text-align: left

#instant-checkout-button
  margin-top: 12px

.inventory-status-message
  color: var(--inventory-status-text-color)
  margin: 10px 0 auto
  text-align: center
  padding: 8px 0
  font-weight: 500

.related-products-container
  margin-top: calc(var(--margin-size) * 2)

  @media screen and (max-width: $break-medium)
    margin-top: calc(var(--margin-size) * 1.5)

.related-products-header
  display: flex
  align-items: center

  .related-products-view-all-link
    margin-left: auto

    &:hover
      text-decoration: underline
      text-underline-offset: 4px

#payment-processor-messaging
  margin: 20px 0 0
  width: 100%
  display: block
  
  body[data-bc-page-type="product"] &
    margin: 0

  body[data-bc-page-type="cart"] &
    margin-bottom: 20px

  &.display-flex
    display: flex
    flex-direction: column
    justify-content: center
    align-items: center
    
    &.dual-messaging
      gap: 15px
  
  &.display-grid
    display: grid
  
  &.hidden
    position: absolute
    left: -9999px
    top: -9999px

  > div
    margin-bottom: 0
  
  // Only apply the margin for non-flex layouts when dual messaging is present
  &:not(.display-flex)
    &.dual-messaging > div.visible:first-of-type
      margin-bottom: 15px

